@@ -807,12 +807,15 @@ else
 fi
 
 PKG_CONFIG_DIR='${libdir}/pkgconfig'
-EXPAND_EXPRESSION(PKG_CONFIG_PATH, $PKG_CONFIG_DIR)
+
+if test -z "$PKG_CONFIG_ENV" ; then
+  EXPAND_EXPRESSION(PKG_CONFIG_ENV, PKG_CONFIG_PATH=$PKG_CONFIG_DIR)
+fi
 
 AC_SUBST(pkg_config_true)
 AC_SUBST(pkg_config_false)
 AC_SUBST(PKG_CONFIG_DIR)
-AC_SUBST(PKG_CONFIG_PATH)
+AC_SUBST(PKG_CONFIG_ENV)
 
 ### C++ binding
 
